--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
     preview={would_cite_should_cite.png}
 }
 @article{choi2025bready4ai,
-    title   = {BReady4AI: A Global AI Innovation Index},
+    title   = {BReady4AI: Global AI Innovation Index},
     year    = {2025},
     journal = {Working Project, World Bank},
     abstract = {We construct an annual, country-level AI innovation index organized around three pillars: Production of AI, Consumption of AI, and Participation in AI. Using indicators built from publications, patents, grants, collaboration networks, and demographic diversity, we score and rank countries on their capacity for frontier AI innovation.},
