--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -70,6 +70,7 @@
       <br> - Despite South-East Asia being one of the world's safest regions with a homicide rate of 1.8 per 100,000 people, a growing sense of insecurity, particularly among women, has emerged due to factors like COVID-19, economic disruptions, and crime, highlighting the need for enhanced law enforcement and inclusive security approaches.
       <br> - Over the past decade, official development assistance (ODA) for gender equality in the ASEAN region has increased significantly, with 47% of all ODA in 2022 supporting gender-focused initiatives, though investments directly targeting gender equality have declined, highlighting the need for continued and expanded funding to sustain progress in areas like women's participation, violence reduction, and the gender-environment nexus.},
   year={2024},    
+  month={September},
   selected={true},
   preview={ASEAN_thumbnail.png},  
   pdf={ASEAN-gender-outlook_2024.pdf}
